--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 /************************************************************************************************
 Description:
 Einige Verleger die ein Leistungsschutzrecht für ihre Publikationen fordern
-haben den Knall nicht gehört.
+haben den Knall nicht gehoert.
 Wer die Schuld fuer sein eigenes Versagen ausschließlich in der Beschuldigung
 anderer sucht und nicht in der Lage ist selbst sein Handeln und Fehler zu reflektieren,
 der verdient es nicht das wir Kunden ihm auch nur eine Zeile seiner Werke abnhemen oder lesen.
@@ -10,9 +10,11 @@ Am Ende entscheided dieses komische Wesen names Kunde ueber den Erfolg/Miserfolg
 und auch ueber den finanziellen Erfolg des Produktes.
 
 
-Zum blocken von Publikationen deren Verleger das mit dem "Der Kunde ist König" nicht verstehen gibt es hier
-files die die Domains der Leistungsschutzrecht-Forder und Lobbyisten nach 127.0.0.1 auflösen.
+Zum blocken von Publikationen deren Verleger das mit dem "Der Kunde ist Koenig" nicht verstehen gibt es hier
+files die die Domains der Leistungsschutzrecht-Forder und Lobbyisten nach 127.0.0.1 aufloesen.
 So kann man selber dafür sorgen das man nicht die Publikationen der Verleger nicht ansurft und nimmt diesen
 ewig gestrigen Ihr "Zahlungsmittel", die PageImpressions.
+
+Contact: M8R-i0cfnk@safetymail.info (nur ascii mails)
 ************************************************************************************************/
 11/18/2009 Initial commit
