--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 /************************************************************************************************
 Description:
-Einige Verleger die ein Leistungsschutzrecht für ihre Publikationen fordern
+Einige Verleger die ein Leistungsschutzrecht fuer ihre Publikationen fordern
 haben den Knall nicht gehoert.
-Wer die Schuld fuer sein eigenes Versagen ausschließlich in der Beschuldigung
+Wer die Schuld fuer sein eigenes Versagen ausschliesslich in der Beschuldigung
 anderer sucht und nicht in der Lage ist selbst sein Handeln und Fehler zu reflektieren,
 der verdient es nicht das wir Kunden ihm auch nur eine Zeile seiner Werke abnhemen oder lesen.
 
@@ -12,8 +12,8 @@ und auch ueber den finanziellen Erfolg des Produktes.
 
 Zum blocken von Publikationen deren Verleger das mit dem "Der Kunde ist Koenig" nicht verstehen gibt es hier
 files die die Domains der Leistungsschutzrecht-Forder und Lobbyisten nach 127.0.0.1 aufloesen.
-So kann man selber dafür sorgen das man nicht die Publikationen der Verleger nicht ansurft und nimmt diesen
-ewig gestrigen Ihr "Zahlungsmittel", die PageImpressions.
+So kann man selber dafuer sorgen das man nicht die Publikationen der Verleger nicht ansurft und nimmt diesen
+ewig gestrigen Ihr "Zahlungsmittel", die PI (Page Impressions).
 
 Contact: M8R-i0cfnk@safetymail.info (nur ascii mails)
 ************************************************************************************************/
